# wiki-graph-py

./: .gitignore  README.md  pyproject.toml
src/wiki_graph/: graph.py  requests.py  schemas.py
tests/: data.py  test_graph.py  test_package.py  test_requests.py  test_schemas.py
