[tool.poetry]
name = "wiki-graph"
version = "0.1.0"
description = "Generate graphs of linked wikipedia articles"
authors = ["Billy Daly <widal001@mail.goucher.edu>"]
readme = "README.md"
packages = [{include = "wiki_graph", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.0"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
